Add feed route
